--- a/index.html
+++ b/index.html
@@ -117,17 +117,12 @@
   <a class="photoset-link" href="/file/FIGWDNUI81GDUP0/" data-fancybox-href="http://cdn.instructables.com/FIG/WDNU/I81GDUP0/FIGWDNUI81GDUP0.MEDIUM.jpg">
   <div class="lazy"><img class="photo" alt="Picture of The Components" data-image-id="FIGWDNUI81GDUP0" data-notes="[]" data-orig-height="1080" data-orig-width="1920" src="http://cdn.instructables.com/FIG/WDNU/I81GDUP0/FIGWDNUI81GDUP0.MEDIUM.jpg" data-medium-image="http://cdn.instructables.com/FIG/WDNU/I81GDUP0/FIGWDNUI81GDUP0.MEDIUM.jpg" data-original="http://cdn.instructables.com/FIG/WDNU/I81GDUP0/FIGWDNUI81GDUP0.MEDIUM.jpg" width="620" height="465" style="max-width: 1920px; display: inline;"></div>
   </a>
-  </div></div></div>
-  
-  
-  
-  
-  
-  
+  </div></div></div>  
 </div>
   
 
   <div class="step-body">
+  
   <p>All the stuff you need</p><p>Instead of looking for the best deals, we opted for the simplicity of one-stop shopping.</p>
 <p><strong>For Adafruit purchases, you may use the 10% discount coupon, "PROMEMADA" at Check Out. </strong></p>
   <p>Components you will need and links to purchase them:</p><ul> 
@@ -150,7 +145,8 @@
 
   <li>1 set of DC Power Cabling: <a href="http://r-f.cx/rfcx-ada-743" rel="nofollow">AdaFruit.com (#743)</a></li>
   
-  <li>1 Enclosure (a box or container in which to nest all the above components): <a href="http://r-f.cx/rfcx-radioshack-6x3x2" rel="nofollow">RadioShack.com</a> or, HIGHLY RECOMMENDED, choose a size that will fit YOUR Android phone at <a href="http://r-f.cx/rfcx-polycase" rel="nofollow">PolyCase.com</a></li></ul>
+  <li>1 Enclosure (a box or container in which to nest all the above components): <a href="http://r-f.cx/rfcx-radioshack-6x3x2" rel="nofollow">RadioShack.com</a> or, HIGHLY RECOMMENDED, choose a size that will fit YOUR Android phone at <a href="http://r-f.cx/rfcx-polycase" rel="nofollow">PolyCase.com</a></li>
+  <li>A solar panel like <a href="https://www.adafruit.com/products/500">this one from Adafruit</a></li></ul>
   
   </div>
 
